--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.11.8",
     "https": "^1.0.0",
     "js-cookie": "^3.0.5",
